# obsidian-vault

./: .gitignore  00-知识库入口.md  AGENTS.md
.integrations/github/projectmem/: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  TUTORIAL.md  pyproject.toml
.integrations/github/projectmem/.github/: FUNDING.yml
.integrations/github/projectmem/src/projectmem/: __init__.py  cli.py  global_memory.py  mcp_server.py  models.py  redaction.py  search.py  staleness.py  storage.py  summary.py
.integrations/github/projectmem/src/projectmem/commands/: __init__.py  attempt.py  auto_capture.py  backfill.py  brief.py  context.py  decision.py  export.py  fix.py  global_cmd.py  hooks.py  init.py  instructions.py  log.py  map.py  note.py  precheck.py  regenerate.py  score.py  search.py  show.py  stats.py  visualize.py  watch.py  wrap.py
.integrations/github/projectmem/tests/: test_hooks_path.py  test_init.py  test_init_ux.py  test_log.py  test_mcp_server.py  test_redaction.py  test_search.py  test_showoff.py  test_summary.py  test_v014_features.py  test_visualize.py
.obsidian/: workspace.json
.projectmem/: PROJECT_MAP.md  summary.md
.projectmem/issues/: 0001-issue.md  0002-miniapp-admin-page-requests-admin-products-but-b.md  0003-miniapp-frontend-has-use-mock-true-so-it-uses-lo.md  0004-miniapp-workspace-contains-an-empty-git-director.md  0005-miniapp-is-currently-hardwired-to-use-mock-true.md  0006-backend-cannot-run-locally-because-node-modules.md  0007-admin-user-role-buttons-send-role-changes-but-pu.md  0008-admin-credit-page-displays-credit-available-but.md  0009-public-product-endpoints-read-req-user-price-tie.md  0010-order-list-detail-show-raw-refund-status-such-as.md
01-Projects/: Obsidian AI 记忆库.md  面粉厂小程序.md  项目索引.md
01-Projects/Codex/: Codex ni 项目.md  Codex 插件中文化项目.md  README.md
Agent-Configs/: MCP 配置总览.md  知识库同步指南.md
Scripts/: connect-project-memory.ps1  connect-project-memory.sh  git-sync.sh
Templates/: 项目记录模板.md
(+107 files in other folders)
