[build-system]
requires = ["hatchling>=1.18,<1.27"]
build-backend = "hatchling.build"

[project]
name = "projectmem"
version = "0.1.6"
description = "Local-first memory + judgment layer for AI coding agents — warns before repeating failed fixes."
authors = [{ name = "Ripon Chandra Malo" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
  "ai", "memory", "mcp", "model-context-protocol", "claude", "cursor",
  "coding-agent", "developer-tools", "pre-commit", "local-first",
]
dependencies = [
  "typer>=0.12",
  "mcp>=0.1.0",
  "watchdog>=4.0",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
]

[project.urls]
Homepage = "https://projectmem.dev"
Repository = "https://github.com/riponcm/projectmem"
Documentation = "https://projectmem.dev/guide"
Changelog = "https://projectmem.dev/changelog"
Issues = "https://github.com/riponcm/projectmem/issues"
Paper = "https://arxiv.org/abs/2606.12329"

[project.scripts]
projectmem = "projectmem.cli:main"
pjm = "projectmem.cli:main"
pjm-mcp = "projectmem.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/projectmem"]

[tool.hatch.build.targets.sdist]
# marketing assets are linked from GitHub in the README; no need to ship them to pip users
exclude = ["brand/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
